Fixed the big gap between both parts.

--- a/src/styles/components/_choisirbut.scss
+++ b/src/styles/components/_choisirbut.scss
@@ -50,6 +50,7 @@
   text-align: center;
   text-transform: uppercase;
   font-size: 1.2rem;
+  margin-bottom: -60px;
   a {
     color: $blue;
   }
